# adventofcode2024

./: .gitignore  .ruff.toml  pyproject.toml  setup.cfg  watch_files.md  watch_files.sh
day01/: day01.py
day02/: day02.py  day02_test.py
day03/: day03.py  day03_test.py
day04/: day04.py  day04_test.py
day05/: day05.py  day05_test.py  problem_day05.md
day06/: day06.py  day06_test.py
day07/: day07.py  day07_test.py  problem_day07.txt
day08/: day08.py  day08_test.py  problem_day08.txt
day09/: day09.py  day09_test.py  problem_day09.txt
src/adeventofcode2022.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/adventofcode/: common.py
src/adventofcode/template/: day${day}.py  day${day}_test.py
src/adventofcode2022/: common.py
src/adventofcode2022/day01/: day01.py
src/adventofcode2022/day02/: day02.py  day02_test.py
src/adventofcode2022/day03/: day03.py  day03_problem.md  day03_test.py
src/adventofcode2022/day04/: day04.py  day04_test.py
src/adventofcode2022/day05/: day05_test.py
src/adventofcode2022/day06/: day06_test.py
src/adventofcode2022/template/: day${day}_test.py  dayT_test.py
template/: dayT.py  dayT_test.py
