[metadata]
name = adeventofcode2022
# version = attr: adeventofcode2022.VERSION
author = George Murga
author_email = george.murga+github@gmail.com
description = Solutions for Advent of Code 2022 in Python
licence = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_pakage_data = True
packages_dir = 
    =src
packages = find:
python_requires = >=3.10
install_requires =
    pytest
    importlib-metadata; python_version<"3.8"

# [options.package_data]

[options.entry_points]
console_scripts = 
  create_new_day=adventofcode2022.common:main

# [options.extras_require]

[options.packages.find]
where = src
exclude = 
    docs*
