[metadata]
name = adeventofcode
# version = attr: adeventofcode.VERSION
author = George Murga
author_email = george.murga+github@gmail.com
description = Solutions for Advent of Code in Python
licence = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_pakage_data = True
packages_dir = 
    =src
packages = find:
python_requires = >=3.10
install_requires =
    pytest
    importlib-metadata; python_version<"3.8"

# [options.package_data]

[options.entry_points]
console_scripts = 
  create_new_day=adventofcode.common:main

# [options.extras_require]

[options.packages.find]
where = src
exclude = 
    docs*

[mypy]
python_executable = ./.venv/bin/python
exclude = '.*/template/.*'

[pycodestyle]
max-line-length = 100
max-doc-length = 100
